--- a/UnityApp/Assets/UI/RunMode/RunMode.uxml
+++ b/UnityApp/Assets/UI/RunMode/RunMode.uxml
@@ -1,4 +1,5 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements">
+    <ui:Style src="../Theme/RobotwinTheme.uss" />
     <ui:VisualElement style="flex-grow: 1; background-color: rgb(20, 20, 20);">
         <!-- Top HUD -->
         <ui:VisualElement style="flex-direction: row; height: 50px; background-color: rgb(40, 40, 40); align-items: center; padding-left: 10px;">
